update event listener

--- a/Example 02 Contour Lines/Index_03_interactive_threshold.html
+++ b/Example 02 Contour Lines/Index_03_interactive_threshold.html
@@ -75,8 +75,10 @@
             .attr('fill', d=> colorScale(d.value))
     }
         draw(8);
-        d3.select("#threshold").on("change", (d)=> {
-            const value = this.value
+        d3.select("#threshold").on("change", (event)=> {
+
+            //const value = document.querySelector(event.target)
+            const value = event.target.value
             svg.selectAll('*').remove()
             draw(value)
 
